<resources>
    <string name="app_name">cibertecApp</string>


    <!--  login -->
    <string name="edt_email">Correo</string>
    <string name="edt_pass">Clave</string>
    <string name="btn_login">INGRESAR</string>
    <string name="btn_register">REGISTRAR</string>

    <!-- Register -->
    <string name="txt_name">Nombre</string>
    <string name="txt_lasName">Apellidos</string>
    <string name="txt_email">Correo</string>
    <string name="txt_pass">Clave</string>
    <string name="txt_repeatPass">Repetir Clave</string>

    <!--  Main  -->
    <string name="txt_welcome">Bienvenidos</string>
    <string name="txt_android">Curso de Android</string>
    
    
    <!--- welcome  -->


</resources>